Don't force pInfo->flags to 0 (#40870)

The server uses the flags to decide if a device comes up as attached or
floating slave. Overwriting the flag after the server has processed the
CorePointer/AlwaysCore/Floating/etc options results in the device always
coming up as floating slave. This again makes the device appear
unresponsive.

X.Org Bug 40870 <http://bugs.freedesktop.org/show_bug.cgi?id=40870>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>